# UmweltTrier

./: .gitiginore  .gitignore  .vercelignore  README.md  build.sh  delete-and-restore-database.sql  notify_new_data.sql  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: security-check.yml  update-db-daily.yml  update-db-hourly.yml  update-db-monthly.yml
apis/: api_pegelonline.py  api_sentinel.py  api_tomtom.py  api_umweltbundesamt.py  api_wetterdienst.py  api_wetterdienst_niederschlag.py  api_wetterdienst_temperatur.py  load_data.py  main.py  write_to_database.py
apis/assets/: trier.geojson
app/: editing.py  load_data.py  main.py
app/figures/: figure_luftqualitaet.py  figure_moselwasser.py  figure_ndvi.py  figure_temperatur.py  figure_wetterdienst.py
app/layouts/: callbacks.py  main_layout.py  side_layout.py
src/: main.py
src/umwelttrier/: main.py  vercel.json
src/umwelttrier/apis/: api_pegelonline.py  api_sentinel.py  api_tomtom.py  api_umweltbundesamt.py  api_wetterdienst_niederschlag.py  api_wetterdienst_temperatur.py  load_data.py  pyproject.toml  write_to_database.py
src/umwelttrier/app/: load_data.py  main.py  pyproject.toml
src/umwelttrier/app/assets/: custom.css
src/umwelttrier/app/figures/: figure_luftqualitaet.py  figure_moselwasser.py  figure_ndvi.py  figure_wetterdienst.py
src/umwelttrier/app/layouts/: callbacks.py  main_layout.py  side_layout.py
src/umwelttrier/app/utils/: load_data.py
