[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "umwelttrier"
version = "0.1.0"
description = "Eine Datenbank mit Umweltdaten fuer Trier, die regelmaessig updated und Daten visualisiert."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash==4.1.0",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "plotly==6.7.0",
    "polars==1.40.1",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "sqlalchemy==2.0.49",
    "psycopg2-binary==2.9.10",
    "wetterdienst==0.120.0",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
]

[dependency-groups]
dev = [
    "pipdeptree>=2.35.2",
    "ruff>=0.0.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "N", "TID"]
exclude = ["__pycache__", ".venv", "build", "dist", ".git"]
target-version = "py312"
