[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src/umwelttrier"]

[project]
name = "umwelttrier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
app = "umwelttrier.app.main:app"

[tool.uv.workspace]
members = [
  "src/umwelttrier/app",
  "src/umwelttrier/api"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "N", "TID"]
exclude = ["__pycache__", ".venv", "build", "dist", ".git", "bzw"]
target-version = "py312"
