[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src/umwelttrier"]

[project]
name = "umwelttrier.app"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "dash==4.1.0",
    "numpy==2.4.4",
    "plotly==6.7.0",
    "pandas==3.0.2",
    "flask>=3.1.3",
    "sqlalchemy==2.0.49",
    "psycopg2-binary==2.9.10",
    "python-dotenv>=1.2.2",
]

[project.scripts]
app = "umwelttrier.app.main:app"
